# pprofessor

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
apps/macos/: AppStoreExportOptions.plist  Makefile  Package.swift  README.md  project.yml
apps/macos/Sources/PProfessor/: AppIcon.icns  CanvasIcicleGraphView.swift  ContentView.swift  ExportButton.swift  FilterBar.swift  Info.plist  PProfessorApp.swift  ProcessPickerView.swift  ProfileColorScheme.swift  ProfileDetailPanel.swift  ProfileEmptyState.swift  ProfileTimelineView.swift  ProfileViewModel.swift  SessionCoordinator.swift  StackFrameRow.swift  ZoomIndicatorView.swift
apps/macos/Sources/PProfessorKit/: AttachProcessInfo.swift  CLIInstaller.swift  FlamegraphNode.swift  LiveProfileAccumulator.swift  ProfileConverter.swift  ProfileSession.swift  ProfileSessionStore.swift  ProfileTimeline.swift  SessionStreamProtocol.swift  TCPSessionServer.swift  UnixSessionServer.swift
apps/macos/Tests/PProfessorKitTests/: AttachProcessInfoTests.swift  CLIInstallerTests.swift  LiveProfileAccumulatorTests.swift  ProfileConverterTests.swift  ProfileSessionTests.swift  ProfileTimelineTests.swift  StreamProtocolTests.swift  TCPSessionServerTests.swift  UnixSessionServerTests.swift
src/: builder.rs  cli.rs  encode.rs  handle.rs  lib.rs  main.rs  pprof.rs  processes.rs  profile.rs  stream.rs  symbolicate.rs  symbolicated.rs
src/sampler/: macos.rs  mod.rs
tests/: app_store_release_tasks.sh  live_snapshot.rs  process_list.rs  profile_child.rs  stream_protocol.rs
tests/fixtures/: busy_loop.rs
(+11 files in other folders)
